[tool.poetry]
name = "EasyValidator"
version = "1.0.0"
description = "Add some Qt input validator."
authors = ["qiufeng <appleidqiufeng@outlook.com>"]
readme = "README.md"
license = "MIT"
keywords = ["Qt", "Site", "Easy", "Validator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Homepage" = "https://github.com/qiufengcute/EasyValidator"
"Repository" = "https://github.com/qiufengcute/EasyValidator"
"Changelog" = "https://github.com/qiufengcute/EasyValidator/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"
PySide6 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"